--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
-            "type": "pwa-chrome",
+            // "type": "pwa-chrome",
+            "name": "Launch localhost",
+            "type": "firefox",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
+            "reAttach": true,
+            "url": "http://localhost:5000",
             "webRoot": "${workspaceFolder}"
         }
     ]
